--- a/.env.development
+++ b/.env.development
@@ -19,7 +19,7 @@ ATLAS_DB_PASS=dZXIK817SQNXYvh9
 ATLAS_DB_PORT=27017
 
 # Atlas
-ATLAS_DB_URI = .eurqe7r.mongodb.net/
+ATLAS_DB_URI = mongodb+srv://khanhtq:FHgULaJRuRyQD8UN@backend-server.eurqe7r.mongodb.net/?retryWrites=true&w=majority
 ATLAS_DB_PORT = 27017
 ATLAS_DB_NAME = backend-server
 ATLAS_DB_USER = khanhtq
@@ -60,7 +60,7 @@ TRACKING_REGION="nmg1"
 
 
 
-SV_HTTP_PORT=5000
+PORT=5000
 SV_JWT_TOKEN_KEY=ASDf@SDFEwfsF
 SV_JWT_EXPIRES_IN=24h
 
